<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fondo_pantalla"
    tools:context=".RegistroCliente">

    <Button
        android:id="@+id/btn_omitir"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="288dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/botones_color"
        android:text="@string/omitir"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/elige_tus_servicios_preferidos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_omitir"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Lista de servicios -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <include
                android:id="@+id/chk_plomeria"
                layout="@layout/item_servicio_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/chk_limpieza"
                layout="@layout/item_servicio_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/chk_cerrajeria"
                layout="@layout/item_servicio_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/chk_mecanica"
                layout="@layout/item_servicio_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/chk_fletes"
                layout="@layout/item_servicio_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        android:backgroundTint="@color/botones_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>